Cli: ensure JDK11 compatibility (#376)